# vdsl-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/vdsl-mcp/: .gitignore  Cargo.toml
crates/vdsl-mcp/src/: main.rs
crates/vdsl-mcp/src/application/: apply_registry.rs  batch_service.rs  batch_service_tests.rs  mod.rs  profile_service.rs  profile_service_tests.rs  run_registry.rs  storage_service.rs  tunnel_registry.rs
crates/vdsl-mcp/src/domain/: error.rs  mod.rs  models.rs  pod.rs  profile.rs  project.rs
crates/vdsl-mcp/src/infra/: config.rs  generation.rs  mlua_runtime.rs  mod.rs  pod_shell.rs  runpod_cli.rs  sync_db.rs  sync_tasks.rs  syncd_client.rs  syncd_spawn.rs  syncd_token.rs
crates/vdsl-mcp/src/interface/: mcp.rs  mod.rs  syncd.rs  syncd_http.rs  syncd_watcher.rs
crates/vdsl-sync/: Cargo.toml
crates/vdsl-sync/examples/: e2e_three_location_sync.rs
crates/vdsl-sync/src/: fmt.rs  lib.rs
crates/vdsl-sync/src/application/: error.rs  mod.rs  observer.rs  recovery_executor.rs  route.rs  scanner.rs  sdk.rs  sdk_impl.rs  store.rs  sync_facade.rs  sync_service.rs  task.rs  topology_scanner.rs  topology_store.rs  transfer_engine.rs
crates/vdsl-sync/src/application/sdk_impl/: builder.rs  execute.rs  mod.rs  sync_ops.rs
crates/vdsl-sync/src/domain/: config.rs  delta.rs  digest.rs  distribute.rs  entry.rs  error.rs  file_type.rs  fingerprint.rs  graph.rs  location.rs  location_file.rs  mod.rs  plan.rs  recovery.rs  retry.rs  route.rs  scan.rs  test_helpers.rs  topology_delta.rs  topology_file.rs  tracked_file.rs  transfer.rs  view.rs
crates/vdsl-sync/src/infra/: backend.rs  error.rs  file_store.rs  hasher.rs  location.rs  location_file_store.rs  location_scanner.rs  mod.rs  rclone.rs  remote_store.rs  shell.rs  store.rs  topology_file_store.rs  transfer_store.rs
crates/vdsl-sync/src/infra/sqlite/: location_file_store_impl.rs  mapping.rs  mod.rs  schema.rs  task_store_impl.rs  topology_file_store_impl.rs  transfer_store_impl.rs
docs/: mlua-thin-host-proposal.md
docs/design/: sync-pipeline.md
src/: lib.rs  main.rs
src/application/: error.rs  mod.rs  pod_service.rs
src/domain/: error.rs  mod.rs  models.rs  pod.rs  repository.rs
src/infra/: comfyui_client.rs  mlua_runtime.rs  mod.rs  runpod_cli.rs  sqlite.rs
src/interface/: mcp.rs
