[package]
name = "vdsl-mcp"
version = "0.1.3"
edition = "2021"
description = "MCP server for VDSL — AI-native image generation platform. RunPod GPU provisioning, ComfyUI orchestration, model management."
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
repository = "https://github.com/ynishi/vdsl-mcp"
homepage = "https://github.com/ynishi/vdsl-mcp"
documentation = "https://docs.rs/vdsl-mcp"
readme = "README.md"
keywords = ["mcp", "comfyui", "runpod", "image-generation", "ai"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
urlencoding = "2"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
uuid = { version = "1", features = ["v4"] }

# Feature-gated: mlua in-process backend
mlua = { version = "0.11", features = ["lua54", "vendored"], optional = true }
mlua-batteries = { version = "0.2", features = ["fs", "json", "http"], optional = true }
mlua-isle = { version = "0.1", optional = true }
pngmeta = { version = "0.1.4", optional = true }
pngmetagrep-core = { version = "0.1.4", optional = true }

[features]
default = ["mlua-backend"]
mlua-backend = ["dep:mlua", "dep:mlua-batteries", "dep:mlua-isle", "dep:pngmeta", "dep:pngmetagrep-core", "dep:rusqlite"]

[dev-dependencies]
