[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
repository = "https://github.com/ynishi/vdsl-mcp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
async-trait = "0.1"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tracing = "0.1"
futures = "0.3"
tempfile = "3"
secrecy = "0.10"

# Internal
vdsl-sync = { path = "crates/vdsl-sync" }
