[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
repository = "https://github.com/ynishi/vdsl-mcp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
async-trait = "0.1"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
glob = "0.3"
tempfile = "3"
secrecy = "0.10"
walkdir = "2"

config = { version = "0.14", default-features = false, features = ["toml"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
nix = { version = "0.29", features = ["process", "signal"] }
axum = "0.8"
notify = "8"
notify-debouncer-full = "0.6"

# Internal
vdsl-sync = { version = "0.2.0", path = "crates/vdsl-sync" }
