[package]
name = "vdsl-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "File synchronization engine — N-location, pluggable store & backend"
keywords = ["sync", "storage", "file-sync"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
secrecy = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

# Default store
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
test-utils = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
